deploy/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker
  labels:
    app.kubernetes.io/name: broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: broker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: broker
    spec:
      containers:
        - name: broker
          image: yes/broker
          ports:
            - name: grpc
              containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: broker-service
  labels:
    app.kubernetes.io/name: broker
spec:
  type: NodePort
  ports:
    - name: grpc
      port: 8081
      nodePort: 30100
      targetPort: 8081
      protocol: TCP
  selector:
    app.kubernetes.io/name: broker
