deploy/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app.kubernetes.io/name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest
          env:
            - name: GF_SECURITY_ADMIN_USER
              value: admin
            - name: GF_SECURITY_ADMIN_PASSWORD
              value: "123456"
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-datasources-volume
              mountPath: /etc/grafana/provisioning/datasources/datasources.yaml
              readOnly: false
              subPath: datasources.yaml
      volumes:
        - name: grafana-datasources-volume
          configMap:
            defaultMode: 420
            name: grafana-datasources-conf
---
kind: ConfigMap
apiVersion: v1
metadata:
  name: grafana-datasources-conf
data:
  datasources.yaml: |
    apiVersion: 1
    datasources:
      - name: Broker
        type: prometheus
        url: http://prometheus-service:9090
        isDefault: true

---

apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  labels:
    app.kubernetes.io/name: grafana
spec:
  type: NodePort
  ports:
    - name: graf
      port: 3000
      nodePort: 30900
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: grafana
