deploy/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  labels:
    app.kubernetes.io/name: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jaeger
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:latest
          ports:
            - containerPort: 16686
            - containerPort: 14269
            - containerPort: 6831

---

apiVersion: v1
kind: Service
metadata:
  name: jaeger-service
  labels:
    app.kubernetes.io/name: jaeger
spec:
  type: NodePort
  ports:
    - name: jag1
      port: 16686
      targetPort: 16686
      protocol: TCP

    - name: jag2
      port: 14269
      targetPort: 14269
      protocol: TCP

    - name: jag3
      port: 6831
      targetPort: 6831
      protocol: TCP
  selector:
    app.kubernetes.io/name: jaeger
