deploy/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  labels:
    app.kubernetes.io/name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          args:
            - "--envoy.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-envoy-volume
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yml
      volumes:
        - name: prometheus-envoy-volume
          configMap:
            defaultMode: 420
            name: prometheus-conf

---

kind: ConfigMap
apiVersion: v1
metadata:
  name: prometheus-conf
data:
  prometheus.yml: |
    global:
      scrape_interval: 15s
      evaluation_interval: 15s

    alerting:

    rule_files:

    scrape_configs:
      - job_name: broker
        metrics_path: /metrics
        static_configs:
          - targets: [ "broker-service:9091" ]

---

apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  labels:
    app.kubernetes.io/name: prometheus
spec:
  type: NodePort
  ports:
    - name: pom
      port: 9090
      nodePort: 30700
      targetPort: 9090
      protocol: TCP
  selector:
    app.kubernetes.io/name: prometheus
